[package]
name = "bt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
log = "0.4.17"
serde = "1.0.152"
serde_bencode = "0.2"
serde_derive = "1.0.152"
sha1 = "0.10.5"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
url = "2.3.1"
serde_bytes = "0.11.8"
