[package]
name = "bt-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# error convenient handling
anyhow = "1.0.68"
thiserror = "1.0.38"

# log crate
log = "0.4.17"

# serlization and deserialization
serde = "1.0.152"
serde_bencode = "0.2"
serde_derive = "1.0.152"
serde_bytes = "0.11.8"

# sha-1
sha1 = "0.10.5"

# asynchronous crate
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }

# http crate
url = "2.3.1"
reqwest = "0.11.13"
percent-encoding = "2.2.0"

# for handling byte value 
bytes = "1.3.0"

# bitfield
bitvec = "1.0.1"
iovec = "0.1.4"

[dev-dependencies]
# start local test serer
mockito = "0.31.1"
