[package]
name = "bt-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# error convenient handling
anyhow = "1.0.68"
thiserror = "1.0.38"

# log crate
log = "0.4.17"

# serlization and deserialization
serde = "1.0.152"
serde_bencoded = "0.3.1"
# serde_bencode = "0.2"
serde_derive = "1.0.152"
serde_bytes = "0.11.8"

# sha-1
sha1 = "0.10.5"

# asynchronous crate
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
futures = "0.3.26"

# http crate
url = "2.3.1"
reqwest = "0.11.13"
percent-encoding = "2.2.0"

# for handling byte value 
bytes = "1.3.0"

# bitfield
bitvec = "1.0.1"

# lru strategy cache
lru = "0.10.0"

# create tempfile or tempdir for test quickly
tempfile = "3.3.0"

# encode from hex code
hex = "0.4.3"

# global static statment
once_cell = "1.17.0"

# random engine
rand = "0.8.5"

# make assertions more readable
pretty_assertions = "1.3.0"

# TODO: using the nix::uio::Iovec is Deprecated, need fix to use IoSlice or IoSliceMut
#       but the pwritev and the preadv still being used.
# [target."cfg(target_os = \"linux\")".dependencies]
# nix = "*"


[dev-dependencies]
# start local test serer
mockito = "1.0.0"
